--- a/css/geo-ws.css
+++ b/css/geo-ws.css
@@ -1,6 +1,6 @@
 #instances-container {
     list-style-type:decimal;
-    list-style-position:outside;
+    list-style-position:inside;
 }
 
 #instances-container li.ws-instance {
