--- a/css/geo-ws.css
+++ b/css/geo-ws.css
@@ -83,6 +83,14 @@ ul.ws-params > li.ws-param {
     padding: 4px 0 0;
 }
 
+.parameter-required {
+    color: #B22222;
+}
+
+.parameter-required-or {
+    color: #D2691E;
+}
+
 @media screen and (min-width: 480px){
     .ws-result {
         max-width: 86%;
