--- a/css/geo-ws.css
+++ b/css/geo-ws.css
@@ -122,6 +122,10 @@ ul.ws-params > li.ws-param {
     padding: 0 16px;
 }
 
+.webfont-loaded body * {
+  font-family: 'Roboto', sans-serif;
+}
+
 @media screen and (min-width: 568px){
     #instances-container li.ws-instance {
         width:90%;
