improved initial loading in FireFox

--- a/css/geo-ws.css
+++ b/css/geo-ws.css
@@ -126,6 +126,14 @@ ul.ws-params > li.ws-param {
   font-family: 'Roboto', sans-serif;
 }
 
+body.wait-init {
+    visibility: hidden;
+}
+
+body.wait-init div.blockUI {
+    visibility: visible;
+}
+
 #infowindow-moreinfo a {
   float: right;
 }
